# STM32_uCOS-III

./: .clangd  .gitignore  CMakeLists.txt  README.md
app/config/: app_cfg.h  os_cfg.h  os_cfg_app.h
app/src/: app.c  app_parking.c  app_parking.h  app_types.h  drv_selftest.c  drv_selftest.h  ipc.c  ipc.h  serial.c  serial.h  tasks.c  tasks.h
app/src/drivers/: drv_buzzer.c  drv_buzzer.h  drv_hcsr04.c  drv_hcsr04.h  drv_ir.c  drv_ir.h  drv_lcd1602.c  drv_lcd1602.h  drv_led.c  drv_led.h  drv_servo.c  drv_servo.h  drv_usart.c  drv_usart.h
app/src/tasks/: task_alarm_log.c  task_alarm_log.h  task_button.c  task_button.h  task_display.c  task_display.h  task_entrance.c  task_entrance.h  task_gate_control.c  task_gate_control.h  task_parking_manager.c  task_parking_manager.h  task_slot_sensor.c  task_slot_sensor.h
assign/hw4/: hw4.docx
assign/hw5/: app.c  app_2.c  hw5.md  report.md
assign/hw6/: app.c  hw6.md
assign/term/: build_pdf.sh  build_pdf_eisvogel.sh  pandoc_style.tex  termproject_initial.md  텀프로젝트 2026.pptx
assign/term/report/: build_report_pdf.sh  report.md  term_style.tex
platform/bsp/: bsp.c  bsp.h
refer/: app_1.c  app_correct.c  hw5.txt
